hard-gists/6323931/run.log
=== Docker Run Log for 6323931 ===
Started at: Mi 29. Okt 16:28:17 CET 2025

[2025-10-29 16:28:17] START: Running container for 6323931
[2025-10-29 16:28:18] SUCCESS: Container f02ae69905bc99c80cb419c1e6393650f6051d81d8d81fceece6ab1ad4400526 started for 6323931
=== Container logs for 6323931 ===
  File "/snippet.py", line 9
    print "Usage: mumble-broadcast <message>"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6323931 ===
[2025-10-29 16:28:20] INFO: Container f02ae69905bc99c80cb419c1e6393650f6051d81d8d81fceece6ab1ad4400526 has stopped
